--- a/ride-sharing-dapp-web/.env
+++ b/ride-sharing-dapp-web/.env
@@ -1,2 +1,5 @@
 REACT_APP_MAPTILER_KEY=Vb73kUzIaSDRt8f8meCV
 REACT_APP_ORS_API_KEY=5b3ce3597851110001cf624852dec26ee8994a3c819f43dd662e0d6f
+
+REACT_APP_ADMIN_EMAIL=mostafizfahim@gmail.com
+REACT_APP_ADMIN_PASSWORD=123456
