--- a/ride-sharing-dapp-web/package.json
+++ b/ride-sharing-dapp-web/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.4",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
